08-08-19

07-08-19

Import validation feedback can now look up by a line number rather than value

Tidying, sending xml requires "Y" not just something in the cell

Only list states with a length of 2 characters. (found states called '1' and '.99999999')

With the new 'scale' function (to handle lookups such as FX or underwriter percentage involvement)

Reimplemented filterby, "as" now works properly

03-08-19

Executes can dump debugging info if required

28-08-19

Brokasure xml scan bug fix

28-08-19

Switch on report scheduler

fixed bugs relating to languages in 'includeInParents' - now amended to 'optionalIncludeInParents' to accommodate the parameter 'optional', which will only fill the cell if the name already exists.

23-08-19

Tidying and work on the excel save to execute correctly after

Code for revised 'lookup' and 'optional'

16-08-19

Make DBCron only grab XML files it has generated - UAT and Dev share folders, need to stop them reading each other's files

Excel plug in save functionality

making the export from execute append the host name to the beginning of the file. For power BI export

has basic string functions (left, right, mid) for user choices (in [])

'standardise' (removes all but numbers and characters from strings (e.g. addresses)

02-08-19

Removes $ and £ signs from values which can be stored as numbers. Preparatory work to handle 'provisionsl'

Host prefix on power BI export

includes function 'standardise' which removes all characters except numbers and letters from string as in 'standardise("17 Broad Street",7) ->17Broad

25-07-19

Include 'Dictionary' in list of heading clause words

Various bug fixes

16-07-19

Minor plugin update. Deployment in preparation for UAT move.

11-07-19

Windows compatibility bug fixing

Excel plugin work, bug fixes for Premium

10-07-19
