@@ -91,7 +91,7 @@ public class DSImportService {
             char delimiter = ',';
             final File sizeTest = new File(uploadedFile.getPath());
             final long fileLength = sizeTest.length();
-            try (BufferedReader br = Files.newBufferedReader(Paths.get(uploadedFile.getPath()), StandardCharsets.UTF_8)) {
+            try (BufferedReader br = Files.newBufferedReader(Paths.get(uploadedFile.getPath()), StandardCharsets.ISO_8859_1)) { // iso shouldn't error while UTF8 can . . .
                 // grab the first line to check on delimiters
                 try {
                     String firstLine = br.readLine();
